# back

./: .gitignore  README.md  docker-compose.yml
todosar/: Dockerfile  manage.py  pyproject.toml
todosar/orders/: admin.py  choices.py  models.py  signals.py  utils.py
todosar/orders/api/: serializers.py  urls.py  views.py
todosar/orders/migrations/: 0001_initial.py  0002_remove_discount_used_discount_current_uses_and_more.py  0003_alter_discount_code_alter_discount_fixed_and_more.py  0004_rename_exp_discount_expiration_and_more.py  0005_order_total.py  0006_alter_discount_fixed_alter_discount_max_uses_and_more.py
todosar/todosar/: asgi.py  urls.py  wsgi.py
todosar/todosar/settings/: base.py  local.py  prod.py
todosar/users/: admin.py  models.py
todosar/users/api/: serializers.py  urls.py  views.py
todosar/users/migrations/: 0001_initial.py  0002_useraddress_latitude_useraddress_longitude.py  0003_alter_useraddress_city.py
todosar/utils/: admin.py  email.py  models.py
todosar/utils/api/: serializers.py  urls.py  views.py
todosar/utils/fixtures/: provincias_arg.json
todosar/utils/migrations/: 0001_initial.py  0002_alter_city_options_alter_country_options.py  0003_generalconfiguration.py
todosar/utils/templates/emails/: welcome.html
